fixed issues in the latest news grid

--- a/style.css
+++ b/style.css
@@ -147,25 +147,25 @@ a:visited {
   color: #aaa;
 }
 
-.parent-container {
+.first-grid {
   max-width: 1200px;
   margin: 0 auto;
 }
 
 /* NEWS GRID */
 
-.news-title-container {
+.title-first {
   width: 95%;
   margin: 60px auto 30px auto;
 }
 
-.news-title-container h2 {
+.title-first h2 {
   font-size: 28px;
   color: #f42;
   font-weight: 700;
 }
 
-.news-grid-container {
+.news-container {
   display: grid;
   gap: 14px;
   grid-template-rows: repeat(8, minmax(auto, 1fr));
@@ -174,21 +174,21 @@ a:visited {
   margin: 0 auto 60px auto;
 }
 
-.news-grid-items {
+.news-items {
   height: 100%;
 }
 
-.news-grid-items h2 {
+.news-items h2 {
   font-size: 16px;
 }
 
-.news-grid-items p {
+.news-items p {
   color: #a9a9a9;
   line-height: 2em;
   font-size: 13px;
 }
 
-.news-grid-container img {
+.news-container img {
   height: 80px;
   width: auto;
   float: left;
@@ -576,14 +576,14 @@ a:visited {
 
   /* NEWS GRID  */
 
-  .news-grid-container {
+  .news-container {
     grid-template-columns: repeat(3, minmax(auto, 1fr));
     grid-template-rows: repeat(3, minmax(auto, 1fr));
     gap: 20px;
     margin-bottom: 80px;
   }
 
-  .news-grid-container img {
+  .news-container img {
     height: auto;
     width: 100%;
     padding-right: 0;
@@ -671,7 +671,7 @@ a:visited {
 
   /* NEWS GRID  */
 
-  .news-grid-container {
+  .news-container {
     grid-template-columns: repeat(4, minmax(auto, 1fr));
     grid-template-rows: repeat(2, minmax(auto, 1fr));
   }
