--- a/style.css
+++ b/style.css
@@ -1,13 +1,6 @@
-h2 {
-  font-family: "Roboto", sans-serif;
-}
-
-h3 {
-  font-family: "Arimo", sans-serif;
-}
-
-p {
-  font-family: Arial, Helvetica, sans-serif;
+body{
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -18,7 +11,6 @@ a:visited {
   color: unset;
 }
 
-/* NAVIGATION BAR */
 
 .small-menu {
   position: fixed;
@@ -52,6 +44,13 @@ a:visited {
 .tertiary-container a {
   color: #6b6b6b;
   text-decoration: none;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
+  
+}
+
+.tertiary-container li{
+  list-style: circle;
+  color: red;
 }
 
 .deals-grid-items a {
@@ -59,18 +58,19 @@ a:visited {
 }
 
 .social-flex-container a {
-  margin: 20px;
-  background-color: #333;
+  margin: 20px 5px;
+  background-color: #333333;
   border-radius: 50%;
   padding: 10px;
   color: white;
-  border: 1.8px solid #333;
+  border: 1.8px solid #333333;
 }
 
 .links-container a {
   margin: 10px;
   text-decoration: none;
   color: #aaa;
+  font-family: "ShentoxW01-UltraLight", sans-serif;
 }
 
 .nav-small a:last-child {
@@ -90,8 +90,6 @@ a:visited {
   display: none;
   z-index: 100;
 }
-
-/* MAIN GRID */
 
 .the-main {
   margin: 81px auto 0 auto;
@@ -120,39 +118,40 @@ a:visited {
   position: absolute;
   bottom: 0;
   color: white;
-  padding-top: 50px;
   background:
     linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0) 10%,
       rgba(0, 0, 0, 1) 80%
     );
+  width: 100%;
 }
 
 .main-up-text * {
-  padding-left: 15px;
-  padding-bottom: 15px;
+    font-family: "Avalon", sans-serif;
+    padding-left: 5px;
+    font-size: 1em;
 }
 
 .main-items-up h2 {
-  font-size: 20px;
+  font-size: 1em;
 }
 
 .main-up-text h3 {
   font-size: 14px;
+  font-family: "ShentoxW01-UltraLight", sans-serif;
 }
 
 .main-up-text p {
   font-size: 12px;
   color: #aaa;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .first-grid {
   max-width: 1200px;
   margin: 0 auto;
 }
-
-/* NEWS GRID */
 
 .title-first {
   width: 95%;
@@ -163,6 +162,7 @@ a:visited {
   font-size: 28px;
   color: #f42;
   font-weight: 700;
+  font-family: "Avalon", sans-serif;
 }
 
 .news-container {
@@ -180,12 +180,14 @@ a:visited {
 
 .news-items h2 {
   font-size: 16px;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .news-items p {
   color: #a9a9a9;
   line-height: 2em;
   font-size: 13px;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .news-container img {
@@ -194,8 +196,6 @@ a:visited {
   float: left;
   padding-right: 18px;
 }
-
-/* FUNDING SECTION  */
 
 .funding-title-div {
   width: 95%;
@@ -206,6 +206,7 @@ a:visited {
 
 .funding-header {
   font-size: 28px;
+  font-family: "Avalon", sans-serif;
 }
 
 .funding-anchors {
@@ -246,6 +247,7 @@ a:visited {
   font-size: 18px;
   font-weight: 700;
   padding-top: 11px;
+  font-family: "Avalon", sans-serif;
 }
 
 .lightorange {
@@ -257,6 +259,7 @@ a:visited {
   font-size: 18px;
   font-weight: 700;
   padding-top: 14px;
+  font-family: "Avalon", sans-serif;
 }
 
 .beige1 {
@@ -270,6 +273,8 @@ a:visited {
   font-size: 13px;
   padding-left: 15px;
   padding-top: 13px;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
+  color: #AAAAAA;
 }
 
 .beige2 {
@@ -280,8 +285,6 @@ a:visited {
 .funding-grid-item4 {
   display: none;
 }
-
-/* Eight Grid Container  */
 
 .ocho-grid {
   display: grid;
@@ -295,6 +298,7 @@ a:visited {
   color: #f42;
   font-size: 28px;
   font-weight: bold;
+  font-family: "Avalon", sans-serif;
 }
 
 .img-txt-container {
@@ -311,7 +315,7 @@ a:visited {
       to bottom,
       rgba(0, 0, 0, 0) 0%,
       rgba(0, 0, 0, 1) 80%
-    );
+    );  
 }
 
 .text-main-img * {
@@ -322,15 +326,18 @@ a:visited {
 .text-main-img h3 {
   font-size: 14px;
   color: white;
+  font-family: "ShentoxW01-UltraLight", sans-serif;
 }
 
 .text-main-img h2 {
   font-size: 20px;
   color: white;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .text-main-img p {
   color: #a9a9a9;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .img-txt-container img {
@@ -352,11 +359,13 @@ a:visited {
 .secondary-container h3 {
   font-size: 13px;
   padding: 10px;
+  font-family: "ShentoxW01-UltraLight", sans-serif;
 }
 
 .secondary-container h2 {
   font-size: 14px;
   padding-left: 10px;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .tertiary-container {
@@ -387,6 +396,11 @@ a:visited {
 .deals-title h2 {
   font-size: 28px;
   font-weight: bold;
+  font-family: "Avalon", sans-serif;
+}
+
+.the-p{
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .deals-grid {
@@ -406,6 +420,7 @@ a:visited {
   font-size: 14px;
   font-weight: bold;
   padding: 5px 0;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .deals-grid-items span {
@@ -417,9 +432,8 @@ a:visited {
 .deals-grid-items p {
   color: #6f6f6f;
   font-size: 14px;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
-
-/* FOOTER  */
 
 .footer {
   font-size: 16px;
@@ -453,6 +467,7 @@ a:visited {
 
 .bottom-footer p {
   color: #aaa;
+  font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
 .bottom-footer img {
@@ -465,7 +480,6 @@ a:visited {
 ==========================*/
 
 @media only screen and (min-width: 768px) {
-  /* NAVIGATION BAR  */
 
   .small-menu {
     display: none;
@@ -507,6 +521,7 @@ a:visited {
     color: #6f6f6f;
     text-decoration: none;
     padding-right: 10px;
+    font-family: "ARS+Maquette+Web+One", sans-serif;
   }
 
   .blk-cont-left a {
@@ -514,6 +529,7 @@ a:visited {
     color: #a9a9a9;
     font-size: 14px;
     padding-right: 10px;
+    font-family: "ShentoxW01-UltraLight", sans-serif;
   }
 
   .blk-cont-right a {
@@ -548,9 +564,8 @@ a:visited {
     height: 30px;
     line-height: 30px;
     padding-left: 15%;
+    font-family: "ARS+Maquette+Web+One", sans-serif;
   }
-
-  /* ******* MAIN GRID ******* */
 
   .the-main {
     grid-template-columns: 1fr 1fr 1fr;
@@ -574,8 +589,6 @@ a:visited {
     grid-area: 2 / 3;
   }
 
-  /* NEWS GRID  */
-
   .news-container {
     grid-template-columns: repeat(3, minmax(auto, 1fr));
     grid-template-rows: repeat(3, minmax(auto, 1fr));
@@ -590,12 +603,11 @@ a:visited {
     margin-bottom: 7px;
   }
 
-  /* FUNDING SECTION  */
-
   .funding-anchors li {
     display: inline;
     font-size: 16px;
     padding: 0 8px;
+    font-family: "ARS+Maquette+Web+One", sans-serif;
   }
 
   .funding-anchors li:nth-of-type(2) {
@@ -607,14 +619,10 @@ a:visited {
     grid-template-columns: repeat(3, auto);
   }
 
-  /* 8 Grid Items  */
-
   .ocho-grid {
     grid-template-columns: repeat(2, minmax(auto, 1fr));
     grid-template-rows: repeat(4, minmax(auto, 1fr));
   }
-
-  /* LATEST DEALS  */
 
   .deals-grid {
     grid-template-rows: repeat(3, minmax(auto, 1fr));
@@ -634,7 +642,6 @@ a:visited {
 ==========================*/
 
 @media only screen and (min-width: 1024px) {
-  /* NAVIGATION BAR  */
 
   .big-logo {
     display: none;
@@ -643,8 +650,6 @@ a:visited {
   .yellow-bar {
     padding-left: 18px;
   }
-
-  /* Main Grid  */
 
   .up-grid-item1 .tnw-logo-up {
     display: flex;
@@ -669,14 +674,10 @@ a:visited {
     font-size: 28px;
   }
 
-  /* NEWS GRID  */
-
   .news-container {
     grid-template-columns: repeat(4, minmax(auto, 1fr));
     grid-template-rows: repeat(2, minmax(auto, 1fr));
   }
-
-  /* FUNDING SECTION  */
 
   .funding-title-div {
     display: flex;
@@ -691,17 +692,55 @@ a:visited {
     display: block;
   }
 
-  /* 8 Grid Items */
-
   .ocho-grid {
     grid-template-columns: repeat(3, minmax(auto, 1fr));
     grid-template-rows: repeat(3, minmax(auto, 1fr));
   }
 
-  /* LATEST DEALS  */
-
   .deals-grid {
     grid-template-rows: repeat(2, minmax(auto, 1fr));
     grid-template-columns: repeat(4, minmax(auto, 1fr));
   }
+}
+
+/* ========================
+        Hover Effects
+   ======================== */
+
+.title-first h2:hover,
+.funding-header:hover,
+.ocho-grid-items h2:hover,
+.deals-title h2:hover,
+.news-items p:hover,
+.funding-anchors li:hover,
+.beige1 p:hover,
+.beige2 p:hover,
+.the-p:hover {
+  color: #000000;
+}
+
+.news-items h2:hover,
+.deals-grid-items h3:hover{
+  color: #FF4422;
+  text-decoration: underline;
+}
+
+.text-main-img h2:hover{
+  text-decoration: underline;
+  color: #FFFFFF;
+}
+
+.text-main-img p:hover,
+.links-container a:hover,
+.main-up-text p:hover {
+  color: #FFFFFF;
+}
+
+.secondary-container h2:hover{
+  color: #f42;
+  text-decoration: underline;
+}
+
+.tertiary-container a:hover{
+  color: #000000;
 }
