--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -10,7 +10,6 @@ a {
 a:visited {
   color: unset;
 }
-
 
 .small-menu {
   position: fixed;
@@ -45,12 +44,13 @@ a:visited {
   color: #6b6b6b;
   text-decoration: none;
   font-family: "ARS+Maquette+Web+One", sans-serif;
-  
 }
 
-.tertiary-container li{
-  list-style: circle;
+.tertiary-container li {
+  list-style: disc;
   color: red;
+  border-bottom: 1px solid #eee;
+  line-height: 1.5em;
 }
 
 .deals-grid-items a {
@@ -59,11 +59,11 @@ a:visited {
 
 .social-flex-container a {
   margin: 20px 5px;
-  background-color: #333333;
+  background-color: #333;
   border-radius: 50%;
   padding: 10px;
   color: white;
-  border: 1.8px solid #333333;
+  border: 1.8px solid #333;
 }
 
 .links-container a {
@@ -106,7 +106,7 @@ a:visited {
   width: 100%;
 }
 
-.main-items-up{
+.main-items-up {
   position: relative;
 }
 
@@ -128,9 +128,9 @@ a:visited {
 }
 
 .main-up-text * {
-    font-family: "Avalon", sans-serif;
-    padding-left: 5px;
-    font-size: 1em;
+  font-family: "Avalon", sans-serif;
+  padding-left: 5px;
+  font-size: 1em;
 }
 
 .main-items-up h2 {
@@ -274,7 +274,7 @@ a:visited {
   padding-left: 15px;
   padding-top: 13px;
   font-family: "ARS+Maquette+Web+One", sans-serif;
-  color: #AAAAAA;
+  color: #aaa;
 }
 
 .beige2 {
@@ -315,7 +315,7 @@ a:visited {
       to bottom,
       rgba(0, 0, 0, 0) 0%,
       rgba(0, 0, 0, 1) 80%
-    );  
+    );
 }
 
 .text-main-img * {
@@ -372,12 +372,6 @@ a:visited {
   padding-left: 20px;
 }
 
-.tertiary-container li {
-  list-style: disc;
-  border-bottom: 1px solid #eee;
-  line-height: 1.5em;
-}
-
 /* LATEST DEALS  */
 
 .latest-container {
@@ -399,7 +393,7 @@ a:visited {
   font-family: "Avalon", sans-serif;
 }
 
-.the-p{
+.the-p {
   font-family: "ARS+Maquette+Web+One", sans-serif;
 }
 
@@ -474,13 +468,11 @@ a:visited {
   height: 15px;
 }
 
-
 /* ========================
-     Meedia 768px - 1023px 
-==========================*/
+     Meedia 768px - 1023px
+========================== */
 
 @media only screen and (min-width: 768px) {
-
   .small-menu {
     display: none;
   }
@@ -581,7 +573,7 @@ a:visited {
     grid-area: 1 / 1 / 3 / 3;
   }
 
-  .up-grid-item2{
+  .up-grid-item2 {
     grid-area: 1 / 3;
   }
 
@@ -638,11 +630,10 @@ a:visited {
 }
 
 /* ========================
-     Meedia 1440 + 1024PX 
-==========================*/
+     Meedia 1440 + 1024PX
+========================== */
 
 @media only screen and (min-width: 1024px) {
-
   .big-logo {
     display: none;
   }
@@ -716,31 +707,31 @@ a:visited {
 .beige1 p:hover,
 .beige2 p:hover,
 .the-p:hover {
-  color: #000000;
+  color: #000;
 }
 
 .news-items h2:hover,
-.deals-grid-items h3:hover{
-  color: #FF4422;
+.deals-grid-items h3:hover {
+  color: #f42;
   text-decoration: underline;
 }
 
-.text-main-img h2:hover{
+.text-main-img h2:hover {
   text-decoration: underline;
-  color: #FFFFFF;
+  color: #fff;
 }
 
 .text-main-img p:hover,
 .links-container a:hover,
 .main-up-text p:hover {
-  color: #FFFFFF;
+  color: #fff;
 }
 
-.secondary-container h2:hover{
+.secondary-container h2:hover {
   color: #f42;
   text-decoration: underline;
 }
 
-.tertiary-container a:hover{
-  color: #000000;
+.tertiary-container a:hover {
+  color: #000;
 }
