--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ a:visited {
 .news-items h2 {
   font-size: 16px;
   font-family: "ARS+Maquette+Web+One", sans-serif;
+  color: #000000;
 }
 
 .news-items p {
@@ -222,6 +223,7 @@ a:visited {
 .funding-header {
   font-size: 28px;
   font-family: "Avalon", sans-serif;
+  color: #f42;
 }
 
 .funding-anchors {
@@ -615,6 +617,7 @@ a:visited {
     font-size: 16px;
     padding: 0 8px;
     font-family: "ARS+Maquette+Web+One", sans-serif;
+    color: #f42;
   }
 
   .funding-anchors li:nth-of-type(2) {
