fixed issues in the yellow navbar style

--- a/style.css
+++ b/style.css
@@ -579,6 +579,7 @@ a:visited {
     line-height: 30px;
     padding-left: 15%;
     font-family: "ARS+Maquette+Web+One", sans-serif;
+    color: #000000;
   }
 
   .the-main {
