--- a/style.css
+++ b/style.css
@@ -39,16 +39,27 @@ a:visited {
   background-color: white;
   display: flex;
   justify-content: space-between;
-  height: 50%;
+  height: 10.5vh;
 }
 
 .small-menu img {
   height: 100%;
-  max-width: 80px;
+  max-width: 120px;
+  position: absolute;
+  bottom: 0;
+  color: white;
+  background:
+    linear-gradient(
+      to bottom,
+      rgb(255, 115, 1) 40%,
+      rgb(255, 0, 0) 60%
+    );
+  width: 100%;
+  padding: 5px 10px;
 }
 
 .nav-small a {
-  font-size: 23px;
+  font-size: 65px;
   color: #aaa;
   border-left: 1px solid lightgray;
   padding: 7px 10px;
@@ -66,6 +77,7 @@ a:visited {
   color: red;
   border-bottom: 1px solid #eee;
   line-height: 1.5em;
+  margin: 15px 0 15px 0;
 }
 
 .deals-grid-items a {
@@ -119,7 +131,7 @@ a:visited {
 }
 
 .the-main img {
-  height: 100%;
+  height: 30vh;
   width: 100%;
 }
 
@@ -233,7 +245,11 @@ a:visited {
   color: #f42;
   font-family: "ARS+Maquette+Web+One", sans-serif;
   list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
+
 
 .funding-grid-container {
   display: grid;
@@ -257,6 +273,7 @@ a:visited {
   top: 10px;
   left: 10px;
   height: 70px;
+  padding-top: 20px;
 }
 
 .orange {
@@ -282,6 +299,7 @@ a:visited {
   font-weight: 700;
   padding-top: 14px;
   font-family: "Avalon", sans-serif;
+  margin: 0;
 }
 
 .beige1 {
@@ -297,6 +315,7 @@ a:visited {
   padding-top: 13px;
   font-family: "ARS+Maquette+Web+One", sans-serif;
   color: #aaa;
+  margin: 0;
 }
 
 .beige2 {
@@ -632,7 +651,7 @@ a:visited {
   }
 
   .funding-grid-container {
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .ocho-grid {
@@ -682,11 +701,13 @@ a:visited {
 
   .up-grid-item1 h2 {
     font-size: 56px;
+    line-height: 1.5em;
   }
 
   .up-grid-item2 h2,
   .up-grid-item3 h2 {
     font-size: 28px;
+    line-height: 1.3em;
   }
 
   .news-container {
@@ -695,8 +716,16 @@ a:visited {
   }
 
   .funding-title-div {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
+    padding-left: 30px;
+  }
+
+  .funding-title-div a{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #f42;
   }
 
   .funding-grid-container {
@@ -724,6 +753,7 @@ a:visited {
 
 .title-first h2:hover,
 .funding-header:hover,
+.funding-title-div a:hover,
 .ocho-grid-items h2:hover,
 .deals-title h2:hover,
 .news-items p:hover,
