--- a/style.css
+++ b/style.css
@@ -102,8 +102,11 @@ a {
   padding-bottom: 15px;
   font-size: 14px;
   line-height: 40px;
-  color: #000;
   font-family: "ARS+Maquette+Web+One", sans-serif;
+}
+
+.yellow-bar a{
+  color: #000;
 }
 
 .big-menu {
@@ -150,7 +153,7 @@ a {
 }
 
 .main-items-up h2 {
-  font-size: 1em;
+  font-size: 20px;
 }
 
 .main-up-text h3 {
@@ -209,7 +212,7 @@ a {
 
 .news-container img {
   height: 80px;
-  width: auto;
+  width: 130px;
   float: left;
   padding-right: 18px;
 }
@@ -313,7 +316,7 @@ a {
   height: 45px;
 }
 
-.funding-anchors > li {
+.funding-anchors li {
   font-family: "ARS+Maquette+Web+One", sans-serif;
   list-style: none;
   color: #f42;
@@ -374,20 +377,22 @@ a {
 }
 
 .secondary-container img {
-  height: 96px;
+  height: 76px;
+  width: 96px;
   float: right;
 }
 
 .secondary-container {
   overflow: auto;
-  margin-top: 1px;
   color: #f42;
   background-color: #fff4f2;
+  height: 80px;
 }
 
 .secondary-container h3 {
   font-size: 13px;
-  padding: 10px;
+  margin: 0;
+  padding: 5px 10px;
   font-family: "ShentoxW01-UltraLight", sans-serif;
 }
 
@@ -500,12 +505,19 @@ a {
 }
 
 /* ========================
-     Meedia 768px - 1023px
+     Meedia 1023px - 768px
 ========================== */
 
-@media only screen and (min-width: 738px) {
-  .small-menu,
-  .blk-right {
+@media only screen and (max-width: 768px){
+
+  .blk-right{
+    display: none;
+  }
+
+}
+
+@media only screen and (min-width: 640px) {
+  .small-menu {
     display: none;
   }
 
@@ -540,8 +552,7 @@ a {
     font-size: 14px;
   }
 
-  .blk-left,
-  .blk-right {
+  .blk-left{
     align-self: center;
     padding-left: 20px;
   }
@@ -572,7 +583,7 @@ a {
   .blk-container a:hover {
     color: white;
   }
-
+ 
   .blk-container1 {
     height: 35px;
     display: flex;
@@ -678,7 +689,7 @@ a {
 
   .yellow-bar {
     padding-left: 18px;
-    padding-bottom: 0;
+    padding-bottom: 10px;
   }
 
   .up-grid-item1 .tnw-logo-up {
