--- a/style.css
+++ b/style.css
@@ -80,11 +80,11 @@ a {
 
 .social-flex-container a {
   margin: 20px 5px;
+  border: 1.8px solid #333;
   background-color: #333;
   border-radius: 50%;
   padding: 8px 10px;
   color: white;
-  border: 1.8px solid #333;
 }
 
 .links-container a {
@@ -225,7 +225,7 @@ a {
 }
 
 .funding-header {
-  font-size: 28px;
+  font-size: 26px;
   font-family: "Avalon", sans-serif;
   color: #f42;
 }
@@ -511,6 +511,10 @@ a {
 @media only screen and (max-width: 768px) {
   .blk-right {
     display: none;
+  }
+
+  .main-items-up h2{
+    font-size: 16px;
   }
 }
 
